--- a/ASP.NET/ASP.NET/ASP.NET.csproj
+++ b/ASP.NET/ASP.NET/ASP.NET.csproj
@@ -6,4 +6,10 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.17" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="8.0.17" />
+      <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.3" />
+    </ItemGroup>
+
 </Project>
